# rew.ui-raylib

./: .gitignore  _std.coffee  app.yaml  build.sh  changeffi.coffee  civet.config.json  flake.nix  game.coffee  main.coffee  oldmain.coffee  p.coffee  test  test-shadows.c  test.coffee  testapp.coffee  tsconfig.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0xi7bkmmbryq2picrwijgyg4iv1mng3s-source  0zw9627ba0pak56x5dms042y5sw9x9cx-source  7fmws9spawip5inh48wlvlicydckgbk3-source  9z8xh93gy7a480cgmd5nc7195fqjsmbp-source  d1yzhfl1ly3n6m1f8w8b7a7s6q031klg-source  d3w0a34jidlphc9rbmki588cs7p8zpmn-source  p9ph4hv05kajp9d2xxx4ym198z48s7m1-source  rf9bd64lwb5pp8nnjny1vdp9h7mlzvbs-source  vfw4536raw52nj1mr7478idvfzljdmrh-source  vsyxg0a2ipa97vz9017dfrg5gg5m3w0f-source  xhcqs9diqqzs57c24hf32yfgnr6zjagi-source
_types/: index.d.ts
assets/: pbr.fs  pbr.vs  shadow.fs  shadow.vs
features/: consts.coffee  drawer.coffee  events.coffee  layout.coffee  loop.coffee  materials.coffee  shadow.coffee  state.coffee  utils.coffee  window.coffee
features/components/: base.coffee  button.coffee  checkbox.coffee  circle.coffee  cube.coffee  dropdown.coffee  flex_rect.coffee  flex_text.coffee  grid.coffee  group.coffee  groupbox.coffee  init.coffee  label.coffee  labelbutton.coffee  light.coffee  line.coffee  listview.coffee  model.coffee  panel.coffee  progressbar.coffee  rect.coffee  registry.coffee  scrollpanel.coffee  slider.coffee  spinner.coffee  statusbar.coffee  tabbar.coffee  text.coffee  textbox.coffee  toggle.coffee
features/ffi/: _values.coffee  def.coffee  raylib.coffee
raylib.h/: example.c  main.re.c  r3d.h  r3d.hpp  raudio.c  raudio.h  rcore.c  rcore.h  rcore.hpp  rgui.h  rgui.hpp  rmodels.c  rmodels.h  rshapes.c  rshapes.h  rtext.c  rtext.h  rtextures.c  rtextures.h  structs.h
shim/: CMakeLists.txt  build.sh  define_consts.js  get_ffi_value.js  main.c  make_full.js  make_structs.js  make_wrappers.js  structs.js  texture_gen.c  texture_gen.h
shim/assets/: blue_noise_64_r8_unorm.raw  brdf_lut_512_rg16_float.raw
shim/cmake/: EmbedAssets.cmake  EmbedShaders.cmake
shim/include/: assets.h  r3d.h  shaders.h
shim/include/assets/: blue_noise_64_r8_unorm.raw.h
shim/include/shaders/: ambient.frag.h  bloom.frag.h  cubemap.vert.h  cubemap_from_equirectangular.frag.h  depth.frag.h  depth.vert.h  depth_cube.frag.h  depth_cube.vert.h  depth_cube_instanced.vert.h  depth_instanced.vert.h  depth_volume.frag.h  depth_volume.vert.h  dof.frag.h  downsampling.frag.h  fog.frag.h  forward.frag.h  forward.vert.h  forward_instanced.vert.h  fxaa.frag.h  gaussian_blur_dual_pass.frag.h  geometry.frag.h  geometry.vert.h  geometry_instanced.vert.h  irradiance_convolution.frag.h  lighting.frag.h  output.frag.h  prefilter.frag.h  scene.frag.h  screen.vert.h  skybox.frag.h  skybox.vert.h  ssao.frag.h  ssr.frag.h  upsampling.frag.h
shim/r3d/: r3d_core.c  r3d_culling.c  r3d_environment.c  r3d_lighting.c  r3d_model.c  r3d_particles.c  r3d_skybox.c  r3d_sprite.c  r3d_state.c  r3d_state.h  r3d_utils.c
shim/r3d/details/: r3d_billboard.c  r3d_billboard.h  r3d_drawcall.c  r3d_drawcall.h  r3d_frustum.c  r3d_frustum.h  r3d_light.c  r3d_light.h  r3d_math.h  r3d_primitives.c  r3d_primitives.h  r3d_shaders.h  r3d_simd.h
shim/scripts/: bin2c.py  glsl_minifier.py
shim/shaders/common/: screen.vert
shim/shaders/generate/: downsampling.frag  upsampling.frag
shim/shaders/raster/: depth.frag  depth.vert  depth_cube.frag  depth_cube.vert  depth_cube_instanced.vert  depth_instanced.vert  depth_volume.frag  forward.frag  forward.vert  forward_instanced.vert  geometry.frag  geometry.vert  geometry_instanced.vert  skybox.frag
shim/shaders/screen/: ambient.frag  bloom.frag  dof.frag  fog.frag  lighting.frag  output.frag  scene.frag  ssao.frag  ssr.frag
